# smarts-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: canonicalization_corpus.rs  evolution_matrix.rs  match_corpus.rs  parse_corpus.rs  pathological_matching.rs
corpus/benchmark/: README.md  matching-workloads.json  parse-extra-cases.json  parse-workloads.json  smarts-evolution-complex-queries-large-v0.smarts  smarts-evolution-complex-queries-v0.smarts  smarts-evolution-example-smiles-v0.tsv  validator-workloads.json
corpus/canonicalization/: rdcanon-groups-v0.json
corpus/matching/: benchmark-aromaticity-v0.rdkit.json  benchmark-counted-v0.rdkit.json  connected-v0.rdkit.json  counts-v0.rdkit.json  disconnected-v0.cases.json  disconnected-v0.rdkit.json  recursive-v0.rdkit.json  ring-v0.cases.json  single-atom-v0.cases.json  single-atom-v0.rdkit.json  stereo-gap-v1.cases.json  stereo-gap-v2.rdkit.json  stereo-gap-v3.cases.json  stereo-gap-v3.rdkit.json  stereo-gap-v5.rdkit.json  stereo-gap-v6.cases.json
corpus/parser/: parse-invalid-v0.json  parse-valid-v0.json
corpus/validator/: benchmark-alerts-v0.rdkit.json  benchmark-extensions-v0.rdkit.json  connected-v0.cases.json  counts-v0.cases.json  grouped-local-v0.cases.json  recursive-v0.cases.json  ring-v0.rdkit.json  stereo-gap-v1.rdkit.json  stereo-gap-v2.cases.json  stereo-gap-v4.cases.json  (+7 more)
crates/smarts-parser/: Cargo.toml
crates/smarts-parser/benches/: canonicalization_corpus.rs  parse_corpus.rs
crates/smarts-parser/src/: bracket.rs  canonicalization.rs  edit.rs  error.rs  lib.rs  parse.rs  query.rs  span.rs  validate.rs
crates/smarts-parser/tests/: canonicalization_rdcanon_groups.rs  canonicalization_rdcanon_red.rs  corpus.rs  rdkit_extension_boundaries.rs  rdkit_extension_red.rs  rdkit_future_syntax.rs  tests_tsv.rs
crates/smarts-validator/: Cargo.toml
crates/smarts-validator/benches/: match_corpus.rs
crates/smarts-validator/src/: error.rs  geometric_target.rs  lib.rs  matching.rs  prepared.rs  screening.rs  target.rs
crates/smarts-validator/tests/: aromatic_bond_semantics_rdkit.rs  aromaticity_edge_cases_rdkit.rs  charged_aromatic_rdkit.rs  connected_rdkit.rs  count_rdkit.rs  counts_rdkit.rs  daylight_advanced_examples_rdkit.rs  daylight_examples_rdkit.rs  daylight_semantics_rdkit.rs  disconnected_rdkit.rs  explicit_h_topology_rdkit.rs  functional_group_alerts_rdkit.rs  functional_group_hierarchy_rdkit.rs  grouped_local.rs  hetero_neighbor_semantics_rdkit.rs  hydrogen_semantics_rdkit.rs  maccs_aromatic_path_regression.rs  maccs_charge_regression.rs  maccs_count_rdkit.rs  maccs_isotopic_hydrogen_regression.rs  maccs_large_ring_rdkit.rs  maccs_oxygen_double_bond_regression.rs  maccs_remaining_live_failures_red.rs  maccs_triple_bond_regression.rs  operator_precedence_rdkit.rs  pains_alerts_rdkit.rs  rdkit_extension_red.rs  recursive_functional_groups_rdkit.rs  recursive_negation_alerts_rdkit.rs  recursive_rdkit.rs  ring_rdkit.rs  single_atom_rdkit.rs  stereo_gap_rdkit.rs  stereo_gap_v2_rdkit.rs  stereo_gap_v3_rdkit.rs  stereo_gap_v4_rdkit.rs  stereo_gap_v5_rdkit.rs  stereo_gap_v6_rdkit.rs  stereo_gap_v7_rdkit.rs  stereo_rdkit.rs  (+1 more)
docs/: geometric-traits-molecule-prototype.md  parser-benchmark-rdkit-vs-rust.md  parser-performance-analysis.md  smarts-implementation-study.md  smarts-parser-survey.md  smarts-phased-plan.md  smarts-reference-corpus.md  smarts-validator-plan.md  smiles-parser-methods-for-smarts-validator.md  smiles-parser-review-for-smarts.md  smiles-parser-stereo-methods-for-smarts-validator.md  validator-benchmark-rdkit-vs-rust.md
examples/: evolution_index_stats.rs  generate_evolution_query_corpus.rs
fuzz/: Cargo.toml  bracket_parse_loop.dict  parse_display_loop.dict  recursive_smarts_lowering.dict
fuzz/corpus/matching_timeout/: alkaloid_recursive_component  alkaloid_short_recursive  carotenoid_broad_disconnected  carotenoid_record_slow  cytosporins_generation_38_a  cytosporins_generation_38_b  large_recursive_pathology  simple_recursive_target
fuzz/dictionaries/: smarts.dict
fuzz/fuzz_targets/: bracket_parse_loop.rs  canonicalization_large_loop.rs  canonicalization_loop.rs  matching_hang.rs  matching_loop.rs  matching_timeout.rs  matching_timeout_common.rs  parse_bracket_atom.rs  parse_display_loop.rs  query_fuzz_common.rs  recursive_smarts_lowering.rs  validator_match_loop.rs
scripts/: benchmark_rdkit_match.py  benchmark_rdkit_parse.py  compare_maccs_pubchem.py  compare_maccs_pubchem_parallel.py  generate_rdkit_validator_corpus.py  run_fuzz_tmux.sh  seed_parse_display_loop_corpus.mjs
src/: bracket.rs  canonicalization.rs  edit.rs  geometric_target.rs  lib.rs  match_error.rs  matching.rs  parse.rs  parse_error.rs  prepared.rs  query.rs  screening.rs  target.rs
tests/: aromatic_bond_semantics_rdkit.rs  aromaticity_edge_cases_rdkit.rs  canonicalization_rdcanon_groups.rs  canonicalization_rdcanon_red.rs  canonicalization_search.rs  charged_aromatic_rdkit.rs  connected_rdkit.rs  count_rdkit.rs  counts_rdkit.rs  daylight_advanced_examples_rdkit.rs  daylight_examples_rdkit.rs  daylight_semantics_rdkit.rs  disconnected_rdkit.rs  explicit_h_topology_rdkit.rs  functional_group_alerts_rdkit.rs  functional_group_hierarchy_rdkit.rs  geometric_traits_probe.rs  grouped_local.rs  hetero_neighbor_semantics_rdkit.rs  hydrogen_semantics_rdkit.rs  maccs_aromatic_path_regression.rs  maccs_charge_regression.rs  maccs_count_rdkit.rs  maccs_isotopic_hydrogen_regression.rs  maccs_large_ring_rdkit.rs  maccs_oxygen_double_bond_regression.rs  maccs_remaining_live_failures_red.rs  maccs_triple_bond_regression.rs  operator_precedence_rdkit.rs  pains_alerts_rdkit.rs  parser_corpus.rs  parser_rdkit_extension_red.rs  rdkit_extension_boundaries.rs  rdkit_extension_red.rs  rdkit_future_syntax.rs  recursive_functional_groups_rdkit.rs  recursive_negation_alerts_rdkit.rs  recursive_rdkit.rs  ring_rdkit.rs  single_atom_rdkit.rs  (+9 more)
tools/pubchem-index-benchmark/: Cargo.toml
tools/pubchem-index-benchmark/src/: lib.rs
tools/pubchem-index-benchmark/tests/: pubchem_index.rs
(+8 files in other folders)
