[workspace]
members = [
    "crates/smarts-parser",
    "crates/smarts-validator",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
unreachable_pub = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.bench]
inherits = "release"
