[workspace]
members = [
    "crates/smarts-parser",
    "crates/smarts-validator",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/earth-metabolome-initiative/smarts-rs"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
non_ascii_idents = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
unreachable_pub = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_const_for_fn = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
redundant_pub_crate = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
module_name_repetitions = "allow"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.bench]
inherits = "release"

[patch."https://github.com/earth-metabolome-initiative/geometric-traits"]
geometric-traits = { path = "../geometric-traits" }
