[package]
name = "smarts-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SMARTS parsing, canonicalization, and substructure matching"
readme = "README.md"
keywords = ["smarts", "chemistry", "substructure"]
categories = ["parser-implementations", "science"]

[features]
default = []
epserde = ["std", "dep:epserde"]
mem_dbg = ["std", "dep:mem_dbg"]
rayon = ["std", "dep:rayon"]
serde = ["dep:serde"]
std = []

[lints]
workspace = true

[dependencies]
elements_rs = { version = "0.2.3", default-features = false }
epserde = { version = "0.12.6", default-features = false, features = ["derive", "mmap", "std"], optional = true }
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", branch = "main", default-features = false, features = ["alloc"] }
mem_dbg = { version = "0.4.1", optional = true }
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", default-features = false, features = ["alloc"], optional = true }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main", default-features = false }
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
criterion = "0.8.2"
elements_rs = "0.2.3"
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", branch = "main" }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[bench]]
name = "parse_corpus"
harness = false

[[bench]]
name = "canonicalization_corpus"
harness = false

[[bench]]
name = "match_corpus"
harness = false

[[bench]]
name = "evolution_matrix"
harness = false

[[bench]]
name = "pathological_matching"
harness = false

[workspace]
members = ["."]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/earth-metabolome-initiative/smarts-rs"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
non_ascii_idents = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
unreachable_pub = "deny"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_const_for_fn = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
redundant_pub_crate = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
module_name_repetitions = "allow"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.bench]
inherits = "release"
