[package]
name = "smarts-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parser-first SMARTS query crate"

[lints]
workspace = true

[dependencies]
elements_rs = { version = "0.2.0", default-features = false }

[dev-dependencies]
criterion = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "parse_corpus"
harness = false
