[package]
name = "smarts-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Validation and matching scaffold for SMARTS queries"
readme = "../../README.md"
keywords = ["smarts", "chemistry", "substructure"]
categories = ["science"]

[lints]
workspace = true

[dependencies]
smarts-parser = { path = "../smarts-parser" }
elements_rs = { version = "0.2.3", default-features = false }
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", branch = "main", default-features = false, features = ["alloc"] }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main", default-features = false }
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
criterion = "0.8.2"
elements_rs = "0.2.0"
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[bench]]
name = "match_corpus"
harness = false
